--- a/src/Components/StudyPlanItems/StudyPlanItems.module.scss
+++ b/src/Components/StudyPlanItems/StudyPlanItems.module.scss
@@ -802,6 +802,11 @@ body .list-button-container {
     ul[data-parentmastertype="step"] li {
       padding: 0em 0 0.75em 0;
     }
+    ul[data-parentmastertype="goal"]
+      > div[id*="collapsible-elm"]
+      > li[id*="name-item"] {
+      transform: translateY(-6.25%);
+    }
     ul[type="step"]
       > div[data-container-type="collapsibleElm"]
       > li[id*="name-item"] {
